# koe

./: .gitignore  Cargo.toml  DESIGN.md  Makefile  README.md
.claude/: settings.local.json
KoeApp/: project.yml
KoeApp/Koe/: Info.plist  main.m
KoeApp/Koe/Accessibility/: SPAccessibilityManager.h  SPAccessibilityManager.m
KoeApp/Koe/AppDelegate/: SPAppDelegate.h  SPAppDelegate.m
KoeApp/Koe/AppIcon.icon/: icon.json
KoeApp/Koe/Audio/: SPAudioCaptureManager.h  SPAudioCaptureManager.m
KoeApp/Koe/Bridge/: SPRustBridge.h  SPRustBridge.m
KoeApp/Koe/Clipboard/: SPClipboardManager.h  SPClipboardManager.m
KoeApp/Koe/Feedback/: SPCuePlayer.h  SPCuePlayer.m
KoeApp/Koe/Hotkey/: SPHotkeyMonitor.h  SPHotkeyMonitor.m
KoeApp/Koe/Overlay/: SPOverlayPanel.m
KoeApp/Koe/Paste/: SPPasteManager.h  SPPasteManager.m
KoeApp/Koe/Permissions/: SPPermissionManager.h  SPPermissionManager.m
KoeApp/Koe/StatusBar/: SPStatusBarManager.h  SPStatusBarManager.m
koe-asr/: Cargo.toml
koe-asr/src/: any.rs  config.rs  event.rs  funasr.rs  lib.rs  sensevoice.rs  sherpa.rs
koe-asr/tests/: api_test.rs
koe-core/: Cargo.toml  build.rs  cbindgen.toml
koe-core/src/: audio_buffer.rs  config.rs  dictionary.rs  errors.rs  ffi.rs  lib.rs  prompt.rs  session.rs  spellfix.rs  telemetry.rs  transcript.rs  wordlist.txt
koe-core/src/asr/: doubao_ws.rs  mod.rs
koe-core/src/llm/: mod.rs  openai_compatible.rs
speechpastectl/: Cargo.toml
speechpastectl/src/: main.rs
