[package]
name = "koe-asr"
version = "0.1.0"
edition = "2021"
description = "Streaming ASR (Automatic Speech Recognition) client using FunASR"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["rt", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"], default-features = false }
futures-util = "0.3"
serde_json = "1"
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
