[package]
name = "koe-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "koe_core"
crate-type = ["staticlib"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
flate2 = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
cbindgen = "0.27"
